Added wxWidget dependency

--- a/source/win32/msvc/pbpeditor/pbpeditor.vcproj
+++ b/source/win32/msvc/pbpeditor/pbpeditor.vcproj
@@ -360,6 +360,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\i18n.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\iconrepository.cpp"
 				>
 			</File>
