--- a/source/win32/msvc/ASC/ASC.vcproj
+++ b/source/win32/msvc/ASC/ASC.vcproj
@@ -372,6 +372,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\i18n.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\iconrepository.cpp"
 				>
 			</File>
