--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -347,6 +347,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\i18n.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\iconrepository.cpp"
 				>
 			</File>
