Added support for translating building names on a map  Changed version number to 2.3.79.0

--- a/source/unix/asc/Makefile.in
+++ b/source/unix/asc/Makefile.in
@@ -92,7 +92,8 @@ am__objects_1 = soundList.$(OBJEXT) typen.$(OBJEXT) \
 	campaignactionrecorder.$(OBJEXT) loggingoutput.$(OBJEXT) \
 	versionidentifier.$(OBJEXT) package.$(OBJEXT) \
 	packagemanager.$(OBJEXT) packagerepository.$(OBJEXT) \
-	dataversioncheck.$(OBJEXT) i18n.$(OBJEXT)
+	dataversioncheck.$(OBJEXT) i18n.$(OBJEXT) \
+	accessconstraints-game.$(OBJEXT)
 nodist_asc_OBJECTS = $(am__objects_1) sg.$(OBJEXT) \
 	gamedialog.$(OBJEXT)
 asc_OBJECTS = $(nodist_asc_OBJECTS)
@@ -342,7 +343,7 @@ legacynetworkloaders.cpp player.cpp cannedmessages.cpp reactionfire.cpp mapimage
 containercontrols.cpp containerbase-functions.cpp windowing.cpp turncontrol.cpp unitset.cpp \
 playercolor.cpp pg_mapdisplay.cpp autotraining.cpp researchexecution.cpp luacommandwriter.cpp \
 campaignactionrecorder.cpp loggingoutput.cpp versionidentifier.cpp package.cpp packagemanager.cpp \
-packagerepository.cpp dataversioncheck.cpp i18n.cpp
+packagerepository.cpp dataversioncheck.cpp i18n.cpp accessconstraints-game.cpp
 
 commonLibs = $(top_builddir)/source/libs/triangul/libtriangul.la \
 $(top_builddir)/source/ai/libai.la $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
@@ -462,6 +463,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/accessconstraints-game.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/applicationstarter.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/asc-mainscreen.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ascstring.Po@am__quote@
