--- a/configure.in
+++ b/configure.in
@@ -218,10 +218,19 @@ reqwx=2.4.0
 AM_PATH_WXCONFIG($reqwx, wxWin=1)
 if test "$wxWin" != 1; then
 	AC_MSG_ERROR([
-		wxWidgets must be installed on your system.
+		wxWidgets $reqwx must be installed on your system.
+		
+		If you have a distribution supplied wxWidgets package installed,
+		perhaps the wxWidgets-devel package is missing. 
+		
+		The wxWidgets packages are sometimes also called wxGTK, if you can't
+		find wxWidgets packages in your distribution, search for wxGTK 
+		
+		If your distribution really does not contain the wxWidgets library,
+		you can download it from www.wxwidgets.org
  
-		Please check that wx-config is in path, the directory
-		where wxWidgets libraries are installed (returned by
+		If you have it installed, but it isn't working, check that wx-config is in path, 
+		the directory where wxWidgets libraries are installed (returned by
 		'wx-config --libs' or 'wx-config --static --libs' command)
 		is in LD_LIBRARY_PATH or equivalent variable and
 		wxWidgets version is $reqwx or above.
