--- a/source/libs/paragui/Makefile.in
+++ b/source/libs/paragui/Makefile.in
@@ -244,6 +244,7 @@ mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
 pdfdir = @pdfdir@
+pkgconfigfound = @pkgconfigfound@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
