--- a/source/libs/revel/Makefile.in
+++ b/source/libs/revel/Makefile.in
@@ -234,6 +234,7 @@ mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
 pdfdir = @pdfdir@
+pkgconfigfound = @pkgconfigfound@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
