Updated version number and Makefiles

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -10,8 +10,11 @@ pkgdatadir 		= $(datadir)/games/@PACKAGE@
 
 @maindatainclude@
 
+# the sleep 1 is necessary because on some systems make thinks that main.d is newer than main.ascdat 
+# although it has been created after that, but having the same mtime
+
 main.ascdat: main.d
-	cd $(srcdir) && @abs_top_builddir@/source/tools/linux/asc_mount \@files.txt @abs_builddir@/main.ascdat && touch main.d
+	cd $(srcdir) && @abs_top_builddir@/source/tools/linux/asc_mount \@files.txt @abs_builddir@/main.ascdat && sleep 1 && touch main.d
 
 clean-local:
 	rm -f main.ascdat main.d 
