--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -666,11 +666,8 @@ uninstall-am: uninstall-pkgdataDATA
 
 @maindatainclude@
 
-# the sleep 1 is necessary because on some systems make thinks that main.d is newer than main.ascdat 
-# although it has been created after that, but having the same mtime
-
 main.ascdat: main.d
-	cd $(srcdir) && @abs_top_builddir@/source/tools/linux/asc_mount \@files.txt @abs_builddir@/main.ascdat && sleep 1 && touch main.d
+	cd $(srcdir) && touch main.d && @abs_top_builddir@/source/tools/linux/asc_mount \@files.txt @abs_builddir@/main.ascdat 
 
 clean-local:
 	rm -f main.ascdat main.d 
