Moved Cargodialog to seperate directory  Minor cleanup

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,4 +33,5 @@ cvspbptag:
 dist-hook:
 	rm -rf `find $(distdir) -name CVS -o -name "*.ascdat" -o -name asc2_dlg.zip -o -name "*~" -o -name .cvsignore -o -name ".#*"`
 	rm -rf `find $(distdir)/data/music -name "*.ogg" `
-	chmod ugo-x doc/manpages/* doc/unitguide/output/*.gif doc/unitguide/output/*.html doc/unitguide/output/*.txt
+	chmod ugo-x doc/manpages/*.6 doc/unitguide/output/*.gif doc/unitguide/output/*.html doc/unitguide/output/*.txt
+	
