--- a/source/tasks/Makefile.in
+++ b/source/tasks/Makefile.in
@@ -47,10 +47,11 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libtaskcore_la_DEPENDENCIES =
-am_libtaskcore_la_OBJECTS = task.lo taskcontainer.lo
+am_libtaskcore_la_OBJECTS = task.lo taskhibernatingcontainer.lo
 libtaskcore_la_OBJECTS = $(am_libtaskcore_la_OBJECTS)
 libtasks_la_DEPENDENCIES =
-am_libtasks_la_OBJECTS = unittask.lo task_generator.lo moveunittask.lo
+am_libtasks_la_OBJECTS = unittask.lo task.lo task_generator.lo \
+	moveunittask.lo taskcontainer.lo
 libtasks_la_OBJECTS = $(am_libtasks_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -246,9 +247,9 @@ zipfound = @zipfound@
 MAINTAINERCLEANFILES = Makefile.in
 AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ 
 noinst_LTLIBRARIES = libtasks.la libtaskcore.la
-libtaskcore_la_SOURCES = task.cpp taskcontainer.cpp 
+libtaskcore_la_SOURCES = task.cpp taskhibernatingcontainer.cpp
 libtaskcore_la_LIBADD = @SDL_LIBS@
-libtasks_la_SOURCES = unittask.cpp task_generator.cpp moveunittask.cpp 
+libtasks_la_SOURCES = unittask.cpp  task.cpp task_generator.cpp moveunittask.cpp taskcontainer.cpp 
 libtasks_la_LIBADD = @SDL_LIBS@
 EXTRA_DIST = $(srcdir)/*.h
 all: all-am
@@ -309,6 +310,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/task.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/task_generator.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/taskcontainer.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/taskhibernatingcontainer.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/unittask.Plo@am__quote@
 
 .cpp.o:
