--- a/source/unix/asc/Makefile.in
+++ b/source/unix/asc/Makefile.in
@@ -104,8 +104,8 @@ am__DEPENDENCIES_2 =  \
 	$(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
 	$(top_builddir)/source/sdl/libsdl.la $(am__DEPENDENCIES_1) \
 	$(top_builddir)/source/util/libutil.la \
-	$(top_builddir)/source/tasks/libtasks.la \
 	$(top_builddir)/source/tasks/libtaskcore.la \
+	$(top_builddir)/source/tasks/libtasks.la \
 	$(top_builddir)/source/graphics/libgraphics.la \
 	$(top_builddir)/source/dialogs/libdialogs.la \
 	$(top_builddir)/source/dialogs/libgamedialogs.la \
@@ -350,8 +350,9 @@ packagerepository.cpp dataversioncheck.cpp i18n.cpp accessconstraints-game.cpp
 commonLibs = $(top_builddir)/source/libs/triangul/libtriangul.la \
 $(top_builddir)/source/ai/libai.la $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
 $(top_builddir)/source/sdl/libsdl.la  $(LOKI_LIBS) $(LUA_GAME_LIB) \
-$(top_builddir)/source/util/libutil.la  $(top_builddir)/source/tasks/libtasks.la \
+$(top_builddir)/source/util/libutil.la  \
 $(top_builddir)/source/tasks/libtaskcore.la \
+$(top_builddir)/source/tasks/libtasks.la \
 $(top_builddir)/source/graphics/libgraphics.la $(top_builddir)/source/dialogs/libdialogs.la \
 $(top_builddir)/source/dialogs/libgamedialogs.la $(top_builddir)/source/actions/libactions.la \
 $(top_builddir)/source/libs/paragui/src/libparagui.la $(top_builddir)/source/widgets/libwidgets.la \
